# docs/swagger.json
@@ -3,8 +3,64 @@
     "info": {
         "contact": {}
     },
-    "basePath": "/api/v1",
+    "basePath": "/api/v1/acc-data",
     "paths": {
+        "/data/{tag}": {
+            "get": {
+                "description": "gets data of the specified tag - get your tags via \"list\" first",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "config"
+                ],
+                "summary": "gets acc data of the specified tag",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "example": "\"ruuvi_1234\"",
+                        "description": "the tags name",
+                        "name": "tag",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/list": {
+            "get": {
+                "description": "gets data of the specified tag - get your tags via \"list\" first",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "config"
+                ],
+                "summary": "gets acc data of the specified tag",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/ping": {
             "get": {
                 "description": "do ping",
